# schnax

./: .gitignore  README.md  energy.py  gaussian_smearing.py  heat_flux.py  predict.py  pyproject.toml  requirements.txt  schnax.py  utils.py
.github/workflows/: travis.yml
experiments/: heat_flux_benchmark.py
gnns-from-scratch/: mnist_mlp.py
interaction/: aggregate.py  cfconv.py  interaction.py
jax/: run.py
misc/: compute_nl_distances.py  offset_sorting.py
misc/mnist/: datasets.py  layerwise_comparison.py
misc/mnist/pytorch/: layerwise_predict.py
misc/mnist/stax/: layerwise_predict.py  train.py
mnist/: datasets.py  explore_pytorch_weights.py  layerwise_comparison.py  mnist_jax.py  mnist_jax_pytorch_weights.py  mnist_pytorch.py
mnist/haiku/: layerwise_predict.py
mnist/jax/: layerwise_predict.py  train.py
mnist/pytorch/: layerwise_predict.py  train.py
model/: gaussian_smearing.py  schnax.py
model/interaction/: cfconv.py  cosine_cutoff.py  filter_network.py  hard_cutoff.py  interaction.py
old/gcn-diy/: model.py  train.py  utils.py
schnax/: __init__.py  energy.py
schnax/model/: gaussian_smearing.py  misc.py  schnet.py
schnax/model/interaction/: aggregate.py  cfconv.py  filter_network.py  interaction.py
schnax/utils/: __init__.py  ase.py  distances.py  layer_hooks.py  schnetkit.py  stateless.py  train.py
schnet/: README.md  convert.py  layer_hooks.py  model.py  model_n1_layer_outputs.pickle  run.py
tests/: interaction_test_case.py  test_cfconv.py  test_distance_expansion.py  test_distances.py  test_embeddings.py  test_end_to_end.py  test_interaction.py  test_schnetkit_end_to_end.py  test_schnetkit_end_to_end_no_activations.py  test_utils.py
tests/assets/: model_n1.torch  model_n5.torch  zro2_n_1500.in  zro2_n_324.in  zro2_n_768.in  zro2_n_96.in
tests/interaction/: test_interaction.py
tests/test_utils/: activation.py  initialize.py  mock_environment_provider.py
train/: iso17.ipynb  train.py
