[tool.poetry]
name = "schnax"
version = "0.1.0"
description = "The SchNet neural network architecture in JAX and JAX-MD"
authors = ["Fabian Nagel <fabian.2.nagel@uni-konstanz.de>", "Marcel Langer <dev@marcel.science>"]

[tool.poetry.dependencies]
python = "^3.8"
jax = {extras = ["cpu"], version = "^0.3.4"}
jax_md = "^0.1.25"
dm-haiku = "^0.0.6"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
ase = "^3.22"
schnetpack = { git = "https://github.com/atomistic-machine-learning/schnetpack.git", branch = "master" }
schnetkit = { git = "https://github.com/sirmarcel/schnetkit.git", branch = "main", rev = "d7cba6a2d5dafdeb72de3c3f37e5b211a30e3e5a" }
nose2 = "^0.11.0"
torch = "^1.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
